--- a/Appendices/SokobanPDDL.tex
+++ b/Appendices/SokobanPDDL.tex
@@ -1,11 +1,11 @@
-\documentclass[../Master.tex]{subfiles}
 \providecommand{\master}{..}
+\documentclass[../Master.tex]{subfiles}
 \begin{document}
 
 \begin{figure}
     \centering
     \includegraphics[scale=0.7]{\master/Graphics/soko1}
-    \caption{\label{fig:simpleSokoban} <\texttt{TODO:} redraw, one tile too many, label tiles> A simple sokoban world. The circle is the sokoban, the squares are crates, and the dashed lines denote goal tiles.}
+    \caption{\label{fig:simpleSokoban} A simple sokoban world. The circle is the sokoban, the squares are crates, and the dashed lines denote goal tiles.}
 \end{figure}
 
 We will now present a formalization of the sokoban world introduced in section \ref{sec:Algorithm} based on the PDDL specification presented in \cite{BS2011}.
