--- a/Appendices/Hypergraph/ConditionalHypothesisConstruction.tex
+++ b/Appendices/Hypergraph/ConditionalHypothesisConstruction.tex
@@ -1,5 +1,5 @@
-\documentclass[../Master.tex]{subfiles}
-\providecommand{\master}{..}
+\providecommand{\master}{../..}
+\documentclass[\master/Master.tex]{subfiles}
 \begin{document}
 
 Unsurprisingly the basics of hypothesis construction for conditional actions is very similar to that of non-conditional actions. 
