--- a/Implementation.tex
+++ b/Implementation.tex
@@ -1,9 +1,11 @@
 \documentclass[../Master.tex]{subfiles}
 \begin{document}
 \providecommand{\master}{..}
+\section{Implementation overview}
+\subfile{Discussion/ImplOverview}
 
-\section{Hypergraph construction algorithm}\label{sec:Impl:HGConstruction}
-    \subfile{Implementation/HypergraphConstruction}
+%\section{Hypergraph construction algorithm}\label{sec:Impl:HGConstruction}
+%    \subfile{Implementation/HypergraphConstruction}
 
 \section{Results}\label{sec:Impl:Results}
     \subfile{Implementation/Results}
