--- a/Master.tex
+++ b/Master.tex
@@ -230,7 +230,7 @@
 \chapter{Conditional actions}\label{chp:ca}
     \subfile{Conditional}
 
-\chapter{Methods (Implementation)}\label{chp:imp}
+\chapter{Test simulation}\label{chp:imp}
     \subfile{Implementation}
 
 \chapter{Discussion}\label{chp:dis}
