--- a/Introduction.tex
+++ b/Introduction.tex
@@ -29,9 +29,9 @@
 	We seek to expand upon this showing how learning of negative precondition learning can be achieved. Furthermore, we will also show how conditional action learning may be achieved. By conditional actions we mean actions that include effects that sometime occur dependent on the state the action is applied in.
 	
 	
-	To given an example of one of problems with learning STRIPS-style actions is that. For instance, predicates that are outputted by an action often cannot be reversed to its original fluent predicate. Case in point, an Action $A(x,y)$ applied with the arguments $A(o_1,o_1)$, that outputs a predicate $p(o_1,o_2)$, creates a dilemma for the learning agent as it cannot deduce what the predicate that spawned it was as $p(x,x), p(x,y), p(y,x), p(y,y)$ are all viable candidates. An extension of this problem is where the agent receives different pieces of knowledge for a given predicate and must by piecing the knowledge together be able to determine which possible predicate is the correct one.
+	To given an example of one of problems with learning STRIPS-style actions is that. For instance, effects that are outputted by an action often cannot be reversed to its original atoms. Case in point, an Action $A(x,y)$ applied with the arguments $A(o_1,o_1)$, that outputs a atom $p(o_1,o_2)$, creates a dilemma for the learning agent as it cannot deduce what atom that spawned it was as the atoms: $p(x,x), p(x,y), p(y,x), p(y,y)$ are all viable candidates. An extension of this problem is where the agent receives different pieces of knowledge for a given atom and must by piecing the knowledge together be able to determine which possible atom is the correct one.
 	
-	As evident these problems often depends on minute details, but they have a huge impact on how learning should be handled. For this reason we will be using a running example throughout the thesis such that problems are easily made apparent. The running example we will be using is that of the $1981$ video game sokoban, that is about a person trying to move creates onto specific positions in a tightly packed warehouse.
+	As evident these problems often depends on minute details, but they have an impact on how learning should be handled. For this reason we will be using a running example throughout the thesis such that problems are easily made apparent. The running example we will be using is that of the $1981$ video game sokoban, that is about a person trying to move creates onto specific positions in a tightly packed warehouse.
 	
 	Throughout this thesis we will solve many different issues pertaining to all sort of different aspects of learning,
 	the following list will give an overview of what we have looked into and discussed:
