--- a/NonConditional/Effects.tex
+++ b/NonConditional/Effects.tex
@@ -78,7 +78,7 @@ For $\Pro$, $\Dsp$ and $\Up$ two important invariant holds.
 \end{figure}
 
 
-
+\subsection{Disproving effects}
 In order to prove or disprove the effects through a transition $(S,a,S')$ we must understand what occurs in a state transition.
 
 When an action is successfully applied in a state $S$, the literals comprising its positive effects are grounded and added to $S$ to form $S'$. Similarly, its negative effects are grounded and removed from $S$. Therefore, we should be able to observe the effects of the action as the differences between $S$ to $S'$. For the special case that an atom is both in $S$ and $S'$ there are two distinct possibilities: either it is part of the effects of the action but was already part of $S$ or they were not an effect (see Figure \ref{fig:nca:venn-of-effects}). The same holds for atoms that are in neither $S$ nor $S'$.
@@ -211,6 +211,7 @@ We see that incorrect effects are correctly disproved, such as moving the sokoba
 	\label{fig:nca:ground-injectivity}
 \end{figure}
 
+\subsection{Proving effects}
 In order to understand proving effects, we must understand how effects are generated based on the action schema.
 The $\ground$ function is used to ground atoms from an action's effect. This is important since if we know what atom a grounded atom originated from, then that is a proof for that atom. This means that if a grounded atom $p \in \Delta S$ returns only one atom when $\invground$ is applied to it, i.e. $\invground(p(O_1,O_2)) = {p(x,y)}$ then that atom $p(x,y)$ has been proved. In other words if $\ground$ is injective then $\invground$ is single-valued and it can thus be applied to all grounded atoms in $\Delta S$ and that will prove all of their respective atoms.
 Whether or not $\ground$ is injective depends on the arguments of the action (see Figure \ref*{fig:nca:ground-injectivity}).
