--- a/Discussion.tex
+++ b/Discussion.tex
@@ -3,13 +3,13 @@
 
 
 
-\section{Discussion of Results}
-    \subfile{Discussion/DiscussionOfResults}
-
-\section{Planning}\label{sec:disc:planning}
-    \subfile{Discussion/Planning}
-
-\section{Hypergraph Collapsing}
-    \subfile{Discussion/HGCollapsing}
+%\section{Discussion of Results}
+%    \subfile{Discussion/DiscussionOfResults}
+%
+%\section{Planning}\label{sec:disc:planning}
+%    \subfile{Discussion/Planning}
+%
+%\section{Hypergraph Collapsing}
+%    \subfile{Discussion/HGCollapsing}
 
 \end{document}
