--- a/Master.tex
+++ b/Master.tex
@@ -221,16 +221,21 @@
 \chapter{Introduction}
 	\subfile{Introduction}
 
-\chapter{Learning} \label{sec:Learning}
+\chapter{Overview of Learning} \label{sec:Learning}
     \subfile{Learning}
 
-\chapter{Non-conditional actions} \label{chp:nca}
+\chapter{Proposal: Generalized algorithm for learning}\label{sec:Algorithm}
+	\subfile{Learning/Algorithm}
+	\section{Example: PDDL-specific algorithm}\label{sec:PDDLAlgo}
+	\subfile{Learning/PDDLAlgorithm}
+
+\chapter{Analysis: Non-conditional actions} \label{chp:nca}
     \subfile{NonConditional}
 
-\chapter{Conditional actions}\label{chp:ca}
+\chapter{Analysis: Conditional actions}\label{chp:ca}
     \subfile{Conditional}
 
-\chapter{Test simulation}\label{chp:imp}
+\chapter{Proof of concept: Simulation}\label{chp:imp}
     \subfile{Implementation}
 
 \chapter{Discussion}\label{chp:dis}
