--- a/Implementation.tex
+++ b/Implementation.tex
@@ -1,13 +1,14 @@
-\documentclass[../Master.tex]{subfiles}
+\providecommand{\master}{.}
+\documentclass[master.tex]{subfiles}
 \begin{document}
-\providecommand{\master}{..}
+
 \section{Implementation overview}
-\subfile{Discussion/ImplOverview}
+\subfile{Implementation/ImplOverview}
 
 %\section{Hypergraph construction algorithm}\label{sec:Impl:HGConstruction}
 %    \subfile{Implementation/HypergraphConstruction}
 
-\section{Results}\label{sec:Impl:Results}
+\section{Simulation of Sokoban}\label{sec:Impl:Results}
     \subfile{Implementation/Results}
 
 
