--- a/Learning/Algorithm.tex
+++ b/Learning/Algorithm.tex
@@ -14,8 +14,10 @@ In the following, we consider a general algorithm for learning in a virtual worl
 
 Note that the above summation does not describe an algorithm, as there is no termination condition in the cycle formed by steps 2--6. However in the following we will show our attempt to algorithmize it.
 
+\section{Algorithm based on the scientific method}
 
-The algorithm presented in figure~\ref{algo:science} takes as input a question, a strategy, some initial knowledge, and a world in which the agent acts. The algorithm essentially repeats the cycle formed by steps 2--6 in the summation given above, untill the question can be satisfactorily answered.
+
+The algorithm presented in \Cref{algo:science} takes as input a question, a strategy, some initial knowledge, and a world in which the agent acts. The algorithm essentially repeats the cycle formed by steps 2--6 in the summation given above, untill the question can be satisfactorily answered.
 
 In the following we will elaborate on the types and functions used in the algorithmization of the scientific method, and their relevance to learning.
 
@@ -45,14 +47,22 @@ In the following we will elaborate on the types and functions used in the algori
 In the context of this algorithm, it is assumed that the world is discrete and deterministic, ie.\ that it is only changed by the actions of the learning agent (specifically when the agent performs experiments).
 
 \paragraph*{Question}
-In the context of learning, the formulation of the question depends on whether the agent is goal-driven or hypothesis-driven; in the first case, the question will typically be posed as a problem that must be solved (``How do we transition to state $t$?''). In the second case, it will take the more general form ``How does this domain work?''.
-For the goal-oriented agent, the question can typically be answered when the problem has been solved, as the agent then has the knowledge required to solve the problem given the same start state (or any state on the path to the solution). For the hypothesis-driven agent, the question can be answered when a predefined amount of knowledge has been obtained about the domain. Note that although a hypothesis answers the question, it is generally not a satisfactory answer untill it has been proven to be true.
+%In the context of learning, the formulation of the question depends on whether the agent is goal-driven or hypothesis-driven; in the first case, the question will typically be posed as a problem that must be solved (``How do we transition to state $t$?''). In the second case, it will take the more general form ``How does this domain work?''.
+%For the goal-oriented agent, the question can typically be answered when the problem has been solved, as the agent then has the knowledge required to solve the problem given the same start state (or any state on the path to the solution). For the hypothesis-driven agent, the question can be answered when a predefined amount of knowledge has been obtained about the domain. Note that although a hypothesis answers the question, it is generally not a satisfactory answer untill it has been proven to be true.
+
+In the context of learning, the formulation of the question will typically be posed as a problem that must be solved (``How do we get from $A$ to $B$?'').
+However it can also take the more general form ``How does this concept work?''.
+If the question is in form of a problem then it can typically be answered when that problem is solved, 
+as the agent then has the knowledge required to solve the problem given the same start state (or any state on the path to the solution). 
+However, if the question is more broadly defined it should be answerable when the agent has an good understanding of the concept. 
+Note that for these broad question a hypothesis that answers the question, is generally not a satisfactory answer until the hypothesis has been proven to be true.
+
 
 \paragraph*{Strategy}
 The strategy determines how the agent forms hypotheses and chooses experiments to perform, and is as such essential to how the agent learns. Different learning strategies and their traits are described in Section~\ref{sec:strats}.
 
 \paragraph*{Hypothesis}
-Hypotheses are created and discarded in an ad-hoc manner, since we are only interested in the knowledge they allowed us to obtain. It is therefore presumed that given the knowledge derived from performing experiments based on the hypothesis, the question can be answered satisfatorily without knowledge of the hypothesis.
+Hypotheses are created and discarded in an ad-hoc manner, since we are only interested in the knowledge they allowed us to obtain. It is therefore presumed that given the knowledge derived from performing experiments based on the hypothesis, the question can be answered satisfactorily without knowledge of the hypothesis.
 
 \paragraph*{Experiment and Result}
 An experiment is designed by a strategy and carried out in the world, which it changes. It is assumed that these changes can be observed, and obtained as part of the \texttt{Result} of the experiment. Additionally, the result may contain information on how the experiment was run, which parts of it succeeded and which did not.
