Added changed precondition learning algorithm to action learning algorithm

--- a/NonConditional.tex
+++ b/NonConditional.tex
@@ -51,8 +51,11 @@ In this chapter we will use expressions/functions such as $ground$, $\geffects$ 
 
 \section{Learning Preconditions}\label{sec:NC:Preconditions}
     \subfile{NonConditional/Preconditions}
+    
+\section{Algorithm for learning non-conditional actions}
+\subfile{\master/NonConditional/Preconditions/PriorKnowledge}
 
-\section{Hypothesis construction}\label{sec:NC:hypcon}
+\section{Construction of Hypothetical Action schema}\label{sec:NC:hypcon}
 	\subfile{NonConditional/HypothesisConstruction}
 
 \end{document}
