--- a/Discussion.tex
+++ b/Discussion.tex
@@ -1,7 +1,13 @@
 \documentclass[Master.tex]{subfiles}
 \begin{document}
 
+\section{Missing: Time/Space complexity of non-condition action learning algorithm}
 
+\section{Missing: Advantage/disadvantage of negative goals solution}
+
+\section{Missing: Solving Hypergraph Collapsing problem}
+
+\section{Missing: Discussion of Simulation}
 
 %\section{Discussion of Results}
 %    \subfile{Discussion/DiscussionOfResults}
