--- a/Master.tex
+++ b/Master.tex
@@ -212,8 +212,10 @@
 \sectionmark{Contents}
 \addtolength{\parskip}{-\baselineskip}
 \tableofcontents
+\listofalgorithms
 \addtolength{\parskip}{\baselineskip}
 \renewcommand{\sectionmark}[1]{\markright{\thesection\ #1}}
+
 %-------------
 % Main content
 %-------------
