--- a/Discussion.tex
+++ b/Discussion.tex
@@ -7,7 +7,7 @@
 
 \section{Missing: Solving Hypergraph Collapsing problem}
 
-\section{Missing: Discussion of Simulation}
+\section{Missing: Thoughts on Simulation}
 
 %\section{Discussion of Results}
 %    \subfile{Discussion/DiscussionOfResults}
