--- a/Conditional/WhatIsConditionalEffects.tex
+++ b/Conditional/WhatIsConditionalEffects.tex
@@ -1,7 +1,6 @@
 \documentclass[../Master.tex]{subfiles}
 \begin{document}
 
-
-
+We will now turn our attention to the task of learning action schemas containing conditional actions (see~\oldcref{sec:app:pddl} for an introduction to this concept). 
 
 \end{document}
