--- a/Master.tex
+++ b/Master.tex
@@ -31,6 +31,7 @@
 \usepackage{subcaption}
 \usepackage{enumitem}
 \usepackage{cleveref}
+\usepackage{wasysym}
 
 \usepackage{tikz}
 \usetikzlibrary{topaths,calc}
@@ -93,7 +94,7 @@
 % Symbol for a predicate connection
 \newcommand{\pc}{\ensuremath{\times}\xspace}
 % Symbol for a binding connection
-\newcommand{\bc}{\ensuremath{\bullet}\xspace}
+\newcommand{\bc}{\ensuremath{\ocircle}\xspace}
 
 \newcommand{\rsc}{\ensuremath{\otimes}\xspace}
 % Symbol for atoms
