--- a/Conditional/DifficulitiesLearningConditionEffects.tex
+++ b/Conditional/DifficulitiesLearningConditionEffects.tex
@@ -66,7 +66,7 @@ In order to simplify the problem we have made the following restrictions on cond
 
 \begin{arestriction}\leavevmode
 \begin{propenum}[label=R.\arabic*]
-	\item Actions cannot have variables. i.e. all actions are of form $A()$, 
+	\item Actions cannot have variables. I.e.\ all actions are of form $A()$, 
 	we have added this restricting to study the problem in its most minimal form.	
 		
 	\item The environment must be fully observable.
