--- a/Master.tex
+++ b/Master.tex
@@ -108,19 +108,19 @@
 % Symbol for domain
 \newcommand{\dom}{\ensuremath{\mathcal{D}}\xspace}
 
-%symbol for disproven
+% symbol for disproven
 \newcommand{\dsp}{\ensuremath{d}\xspace}
 \newcommand{\Dsp}{\ensuremath{D}\xspace}
 
-%symbol for proven
+% symbol for proven
 \newcommand{\pro}{\ensuremath{k}\xspace}
 \newcommand{\Pro}{\ensuremath{K}\xspace}
 
-%symbbol for unproven
+% symbbol for unproven
 \newcommand{\up}{\ensuremath{u}\xspace}
 \newcommand{\Up}{\ensuremath{U}\xspace}
 
-%symbol for candidate
+% symbol for candidate
 \newcommand{\cand}{\ensuremath{c}\xspace}
 \newcommand{\Cand}{\ensuremath{C}\xspace}
 
@@ -134,16 +134,19 @@
 
 \newcommand{\glits}{\ensuremath{\mathbb{G}}\xspace} 
 
-%symbol for Undefined set
+% Symbol for a conditional
+\newcommand{\cond}{\ensuremath{E^C}\xspace}
+
+% symbol for Undefined set
 \newcommand{\undefset}{\ensuremath{\mathcal{X}}\xspace}
 
-%symbol for effect set
+% symbol for effect set
 \newcommand{\geffects}{\ensuremath{\Delta S}\xspace}
 
-%symbol for variables of
+% symbol for variables of a conditional
 \newcommand{\varC}{\ensuremath{\textit{vars}}\xspace}
 
-%symbol for variables of
+% 
 \newcommand{\eff}{\ensuremath{\textit{eff}}\xspace}
 
 \newcommand{\pre}{\ensuremath{\textit{pre}}\xspace}
